fix some spacing on skillscollumn, add background image

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,19 +1,22 @@
 body {
-  background-color:
+  background-color: darkolivegreen;
+  background-image: url(https://media.istockphoto.com/photos/forest-in-a-circle-picture-id1324948770?b=1&k=20&m=1324948770&s=170667a&w=0&h=7HKM0Wn3sVZmoXcmyg6suOSlphtUUMb_d3-VUdhPAuo=);
+  
 }
 img {
   margin: auto;
-  height: auto;
-  width: auto;
+  height: 50%;
+  width: 50%;
   display: block;
+  size-adjust: 30%;
 }
 .centered-image {
   margin: auto;
-  width: auto;
+  width: 50%;
   height: auto;
 }
 h1 {
-  color: green;
+  color: red;
   text-align:center;
   font-style: italic;
   font-family: 'Courier New', Courier, monospace;
@@ -49,6 +52,8 @@ h4 {
   background-color: orange;
   margin-bottom: 10px;
   box-sizing: border-box;
+  display: block;
+  float: center;
 }
 .projects {
   width: 50;
@@ -58,9 +63,20 @@ h4 {
   background-color: orange;
   margin-bottom: 10px;
   box-sizing: border-box;
+  display: block;
 }
 .skillscolumn {
   width: 300px;
   float: right;
+  box-sizing: border-box;
+  display: block;
+  padding: 20px;
+  border: solid;
+  background-color: orange;
+  border-style: solid;
+  border-width: 20px;
+}
+.highlight {
+color: red;
 
-
+  }
